--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
   "authors": [
     "chencheng <sorrycc@gmail.com> (https://github.com/sorrycc)"
   ],
+  "scripts": {
+    "prepublishOnly": "np --no-cleanup --yolo --no-publish"
+  },
   "dependencies": {
     "react-router": "4.3.1",
     "react-router-config": "1.0.0-beta.4",
     "react-router-dom": "4.3.1"
+  },
+  "devDependencies": {
+    "np": "^5.0.1"
   },
   "files": [
     "index.js"
